--- a/MySymf/app/Resources/views/base.html.twig
+++ b/MySymf/app/Resources/views/base.html.twig
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-	Я завжди тут)
+	<h1>This is сайт</h1>
 	
         <div id="sidebar">
 			{% block sidebar %}
