--- a/MySymf/app/Resources/views/forma/show.html.twig
+++ b/MySymf/app/Resources/views/forma/show.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 {% block body -%}
-Show must go on!
-{{numb}}
+Your First name are <h2>{{first}}</h2>
+<br>Your Second name are <h2>{{second}}</h2>
 {% endblock %}
